fixed some more dark mode stuff

--- a/assets/sass/elements/_dark-mode.scss
+++ b/assets/sass/elements/_dark-mode.scss
@@ -152,6 +152,11 @@
                         }
                     }
                 }
+
+                .videos_wrap .column .vid_image_wrap {
+                    border: 1px solid $grayText;
+                    border-radius: 4px;
+                }
             }
 
             &.video_submit {
